:lipstick: fixed hero alignment

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -9,8 +9,7 @@
   }
 
   .hero {
-    max-width: 1200px;
-
+    max-width: 1145px;
     margin: auto;
 
     flex-direction: row-reverse;
