--- a/styles/index.css
+++ b/styles/index.css
@@ -9,13 +9,17 @@
 }
 
 .hero {
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .hero-img-container {
-  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   overflow: hidden;
 }
 
